heroku postgres config v1

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ logging:
     root: INFO
 
 spring:
+  application:
+    name: taskManager
+
   datasource:
     url: jdbc:h2:./taskdb
     username: sa
