--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,5 +1,11 @@
 spring:
   datasource:
-    url: jdbc:h2:./hexlet
-    username: sa
-    password:
+    # https://devcenter.heroku.com/articles/connecting-to-relational-databases-on-heroku-with-java#using-the-jdbc_database_url
+    url: ${JDBC_DATABASE_URL}
+
+  jpa:
+    show-sql: false
+
+logging:
+  level:
+    ROOT: INFO
