Tasl 3. Make Migrations prod v2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     password:
 
   liquibase:
-    change-log: classpath:db/changelog/changelog-master.yaml
+    change-log: classpath:db/changelog/changelog-master.xml
 
   h2:
     console:
