--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,11 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 	// Подключаем зависимости, необходимые для работы плагина
-	liquibaseRuntime 'org.liquibase:liquibase-core:3.8.1'
-	liquibaseRuntime 'org.springframework.boot:spring-boot-starter-data-jpa'
-	liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.6'
-	liquibaseRuntime sourceSets.main.output
+//	liquibaseRuntime 'org.liquibase:liquibase-core:3.8.1'
+	implementation 'org.liquibase:liquibase-core:3.8.1'
+//	liquibaseRuntime 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.6'
+//	liquibaseRuntime sourceSets.main.output
 }
 
 application {
@@ -63,24 +64,25 @@ jacocoTestReport {
 task stage(dependsOn: ['clean', 'installDist'])
 installDist.mustRunAfter clean
 
-
+// liquibase task
 diffChangeLog {
 	dependsOn compileJava
 }
 
-liquibase {
-	activities {
-		main {
-			changeLogFile 'src/main/resources/db/changelog/changelog-master.xml'
-			url 'jdbc:h2:./taskdb'
-			username 'sa'
-			password ''
-			referenceUrl 'hibernate:spring:hexlet.code.app.model' +
-					'?dialect=org.hibernate.dialect.H2Dialect' +
-					'&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy'
-		}
-	}
-}
+// liquibase plugin setup
+//liquibase {
+//	activities {
+//		main {
+//			changeLogFile 'src/main/resources/db/changelog/changelog-master.xml'
+//			url 'jdbc:h2:./taskdb'
+//			username 'sa'
+//			password ''
+//			referenceUrl 'hibernate:spring:hexlet.code.app.model' +
+//					'?dialect=org.hibernate.dialect.H2Dialect' +
+//					'&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy'
+//		}
+//	}
+//}
 
 // Сборка фронтенда.
 // Выполняется только если ничего не изменилось.
