--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,14 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
+	// querydsl
+	implementation 'com.querydsl:querydsl-core:5.0.0'
+	implementation 'com.querydsl:querydsl-jpa:5.0.0'
+	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jpa'
+
+	annotationProcessor 'javax.annotation:javax.annotation-api:1.3.2'
+	annotationProcessor 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
+
 	// Подключаем зависимости, необходимые для работы плагина
 //	liquibaseRuntime 'org.liquibase:liquibase-core:3.8.1'
 	implementation 'org.liquibase:liquibase-core:3.8.1'
