--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,11 @@ plugins {
 	id 'java'
 	id 'jacoco'
 	id 'org.liquibase.gradle' version '2.0.4'
+	// frontend
 	id 'org.siouan.frontend-jdk11' version '6.0.0'
+	// swagger
+	id "com.github.johnrengelman.processes" version "0.5.0"
+	id "org.springdoc.openapi-gradle-plugin" version "1.3.3"
 }
 
 group = 'hexlet.code'
@@ -30,6 +34,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
 
 	// querydsl
 	implementation 'com.querydsl:querydsl-core:5.0.0'
@@ -38,6 +43,8 @@ dependencies {
 
 	annotationProcessor 'javax.annotation:javax.annotation-api:1.3.2'
 	annotationProcessor 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
+
+
 
 	// Подключаем зависимости, необходимые для работы плагина
 //	liquibaseRuntime 'org.liquibase:liquibase-core:3.8.1'
@@ -69,6 +76,7 @@ jacocoTestReport {
 	}
 }
 
+// heroku task
 task stage(dependsOn: ['clean', 'installDist'])
 installDist.mustRunAfter clean
 
