--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 	annotationProcessor 'javax.annotation:javax.annotation-api:1.3.2'
 	annotationProcessor 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
 
-
+	implementation 'com.rollbar:rollbar-spring-boot-webmvc:1.8.1'
+//	compile 'com.rollbar:rollbar-spring-boot-webmvc:1.8.1'
 
 	// Подключаем зависимости, необходимые для работы плагина
 //	liquibaseRuntime 'org.liquibase:liquibase-core:3.8.1'
