--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build with Gradle
         run: make build
         env:
-          - ROLLBAR_TOKEN: ${{secrets.ROLBAR_TOKEN}}
+          ROLLBAR_TOKEN: ${{secrets.ROLBAR_TOKEN}}
 
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
