--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'jacoco'
+	id 'checkstyle'
 	id 'org.liquibase.gradle' version '2.0.4'
 	// frontend
 	id 'org.siouan.frontend-jdk11' version '6.0.0'
