--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 }
 
 application {
-	mainClass = 'hexlet.code.app.AppApplication'
+	mainClass = 'hexlet.code.AppApplication'
 }
 
 compileJava {
@@ -95,7 +95,7 @@ diffChangeLog {
 //			url 'jdbc:h2:./taskdb'
 //			username 'sa'
 //			password ''
-//			referenceUrl 'hibernate:spring:hexlet.code.app.model' +
+//			referenceUrl 'hibernate:spring:hexlet.code.model' +
 //					'?dialect=org.hibernate.dialect.H2Dialect' +
 //					'&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy'
 //		}
