Move db.changelog to yaml format

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,8 @@ spring:
     password:
 
   liquibase:
-    change-log: classpath:db/changelog/changelog-master.xml
+#    change-log: classpath:db/changelog/changelog-master.xml
+    change-log: classpath:db/changelog/db.changelog-master.yaml
 
   h2:
     console:
